--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>送给你</title>
+<title>LOVE</title>
 
 <style>
   * {
@@ -86,10 +86,6 @@
 
 <body>
   
-  <a href="https://pan.quark.cn/s/791627e40438" style="position: fixed; top: 5%; right: 10px; width: 30px; height: 30px; z-index: 1000; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">制作</a>
-  <a href="https://pan.quark.cn/s/791627e40438" style="position: fixed; top: 20%; right: 10px; width: 30px; height: 30px; z-index: 997; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">源码</a>
-   <a href="https://pan.quark.cn/s/791627e40438" style="position: fixed; top: 15%; right: 10px; width: 30px; height: 30px; z-index: 998; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">代码</a>
-   <a href="https://pan.quark.cn/s/791627e40438" style="position: fixed; top: 10%; right: 10px; width: 30px; height: 30px; z-index: 999; background: #696969; border-radius: 50%; padding: 1.0px; text-align: center; color: #ddd; text-decoration: none; line-height: 30px; font-size: 11px;">合集</a>
 <canvas id="canvas"></canvas>
 <canvas style="position:absolute;width:100%;height:100%;" class="canvas" ></canvas>
 <div class="overlay">
@@ -108,7 +104,7 @@
 <div id="jsi-cherry-container" class="container ">
   <!-- 爱心 -->
   <canvas id="pinkboard"  class="container heart"> </canvas>
-<div id="input">送你一个爱心</div>
+<div id="input"></div>
 </div> 
 <script>
  setTimeout(function() {
